added endpoints to /account
